deployment/cicd/kustomize/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: api-gateway
        resources:
          requests:
            cpu: 1024m
            memory: 1024Mi
          limits:
            cpu: 4096m
            memory: 4096Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: user-service
        resources:
          requests:
            cpu: 1024m
            memory: 1024Mi
          limits:
            cpu: 4096m
            memory: 4096Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bill-service
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: bill-service
        resources:
          requests:
            cpu: 1024m
            memory: 1024Mi
          limits:
            cpu: 4096m
            memory: 4096Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: product-service
        resources:
          requests:
            cpu: 1024m
            memory: 1024Mi
          limits:
            cpu: 4096m
            memory: 4096Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kos-mock
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: kos-mock
        resources:
          requests:
            cpu: 1024m
            memory: 1024Mi
          limits:
            cpu: 4096m
            memory: 4096Mi
