deployment/cicd/kustomize/overlays/prod/deployment-user-service-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: user-service
          resources:
            requests:
              cpu: "1024m"
              memory: "1024Mi"
            limits:
              cpu: "4096m"
              memory: "4096Mi"
